--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Header Start-->
   
     <header class="text-gray-800 body-font">
+      <div class="bg-gray-200">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
@@ -26,7 +27,8 @@
             <a class="mr-5 hover:text-gray-900">Contact Me</a>
           </nav>
         </div>
-      </header>
+      </div>
+    </header>
 
       <!-- Header Closes -->
 
@@ -35,7 +37,7 @@
       <section class="text-gray-700 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-large text-gray-900">Hi, I am Yash Chauhan
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-large text-gray-900">Hi, I am Yash Chauhan.
               <br class="hidden lg:inline-block">A Budding Data Scientist Inside The Shell of an Engineer
             </h1>
             <p class="mb-8 leading-relaxed">For me, it’s all about solving the puzzle, and the field of Data Science is a perpetual machine for generating puzzles, it’s a perfect fit. And Hence I’ve made it my mission to learn everything - concept or tool, old or new in order to solve all of its puzzles. And when I am away from them, I like to read, catch a movie or play my guitar to clear my mind.</p>
@@ -263,10 +265,10 @@
             </div>
             <div class="py-4 flex border-t-2 border-gray-200 flex-wrap md:flex-no-wrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="tracking-widest font-medium title-font text-gray-900">Mobile</span>
+                <span class="tracking-widest font-medium title-font text-gray-900">Number</span>
               </div>
               <div class="md:flex-grow">
-                <p class="leading-relaxed">8375049955</p>
+                <p class="leading-relaxed">(+91) 8375049955</p>
               </div>
             </div>
             <div class="py-4 flex border-t-2 border-gray-200 flex-wrap md:flex-no-wrap">
