--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
             </div>
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-                <img class="lg:h-38 md:h-36 w-full object-cover object-center" src="./Images/Python_4_Every.png" alt="blog">
+                <img class="lg:h-38 md:h-36 w-full object-cover object-center" src="./Images/Inter_ML.png" alt="blog">
                 <div class="p-6">
                   <h1 class="title-font text-lg font-medium text-gray-900 mb-1">Intermidiate Machine Learning</h1>
                   <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-4">By: Kaggle</h2>
                   <div class="flex items-center flex-wrap ">
-                    <a class="text-teal-500 inline-flex items-center md:mb-2 lg:mb-0">See Credentials
+                    <a href = "https://www.kaggle.com/learn/certification/lazrus/intermediate-machine-learning" class="text-teal-500 inline-flex items-center md:mb-2 lg:mb-0">See Credentials
                       <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M5 12h14"></path>
                         <path d="M12 5l7 7-7 7"></path>
