--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="mb-8 leading-relaxed">For me, it’s all about solving the puzzle, and the field of Data Science is a perpetual machine for generating puzzles, it’s a perfect fit. And Hence I’ve made it my mission to learn everything - concept or tool, old or new in order to solve all of its puzzles. And when I am away from them, I like to read, catch a movie or play my guitar to clear my mind.</p>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="./Images/Profile.jpg">
+            <img class="object-cover object-center rounded" alt="hero" src="./Images/Profile_Im.jpg">
           </div>
         </div>
       </section>
