--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-large text-gray-900">Hi, I am Yash Chauhan.
               <br class="hidden lg:inline-block">A Budding Data Scientist Inside The Shell of an Engineer
             </h1>
-            <p class="mb-8 leading-relaxed">For me, it’s all about solving the puzzle, and the field of Data Science is a perpetual machine for generating puzzles, it’s a perfect fit. And Hence I’ve made it my mission to learn everything - concept or tool, old or new in order to solve all of its puzzles. And when I am away from them, I like to read, catch a movie or play my guitar to clear my mind.</p>
+            <p class="mb-8 leading-relaxed">For me, it’s all about solving the puzzle, and the field of Data Science is a perpetual machine for generating puzzles, it’s a perfect fit. And Hence I’ve made it my mission to learn everything - concept or tool, old or new in order to solve all of its puzzles. And when I am away from them, I like to read, catch a movie or play my guitar just to clear my mind.</p>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
             <img class="object-cover object-center rounded" alt="hero" src="./Images/Profile_Im.jpg">
